fix(text-editor): prevent layout shifts & jumping menubar while scrolling

--- a/src/components/text-editor/prosemirror-adapter/partial-styles/_prosemirror-menu.scss
+++ b/src/components/text-editor/prosemirror-adapter/partial-styles/_prosemirror-menu.scss
@@ -15,6 +15,14 @@ div#editor {
             box-shadow: 0 0.25rem 0.5rem -0.5rem rgb(var(--color-black), 0.8);
         }
     }
+
+    .ProseMirror-menubar-spacer {
+        // This is a div that they add to keep the menubar in place.
+        // as they are using `position: fixed`.
+        // However, this causes layout shift as the user scrolls,
+        // due to our usage of `position: sticky`.
+        display: none;
+    }
 }
 
 .ProseMirror-menubar {
